--- a/WeatherApp/public/css/style.css
+++ b/WeatherApp/public/css/style.css
@@ -1,17 +1,254 @@
-body{
-  background-image: url("bg.jpg");
-  background-size: cover;
+* {box-sizing:border-box}
+
+body {
+	background-color:#D8BFD8 /*Thistle*/
+  /* background-image: url("bg.jpg"); */
+  /* background-size: cover; */
 }
-.title{
-  text-align: center;
-  color: red;
+
+
+main {
+	width: 62%;
+	float: left;
 }
-.byline{
-  text-align: center;
+
+aside {
+	width: 35%;
+	float: right;
+	background: rgba(122, 130, 136, 0.2);
+
 }
-.login{
-  text-align: center;
+
+#aside-text {
+	font-family: Geneva;
+	text-align: center;
+	margin-top: 90px;
 }
-.register{
-  text-align: center;
+
+p {
+	font-size: 25px;
+	color: #1a1a1a;
+}
+
+h3 {
+	font-size: 40px;
+	color:#B22222
+}
+
+.title {
+	margin-top: 20px;
+}
+
+.title + .title {
+	margin-top: -65px;
+}
+
+button {
+	background-color: #DC143C;
+	border: none;
+	color: white;
+	padding: 7px 11px;
+	font-size: 13px;
+	cursor: pointer;	
+}
+
+button:hover {
+	background-color: #E9967A;
+}
+
+#input {
+	margin-top: -25px;
+	margin-left: 50px;
+	height: 35px;
+	width: 50%;
+	font-size: 11pt;
+}
+
+#panel {
+	height: 60px; 
+	width: 59%; 
+	background: rgba(122, 130, 136, 0.2); 
+	border:2px grey; 
+	margin-top: 26px; 
+	margin-left: 50px;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+	text-align: center;
+}
+
+li {
+	font-size: 27px;
+	display: inline;
+	padding: 20px;
+	color: grey;
+}
+
+#weekdays {
+	font-size: 25px;
+	margin-left: 50px;
+	margin-top: -11px;
+	font-family: Geneva;
+	color: #1a1a1a;
+}
+
+
+.footer {
+	position: static;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 120px;
+	background-color: #8c0d26;
+	color: #d9d9d9;
+	text-align: center;
+	margin-top: 70px;
+	clear: both;
+}
+
+#footer {
+	font-size: 16px;
+	font-style: italic;
+	margin-top: 23px;
+	margin-bottom: -17px;
+	color: white;
+}
+
+/*login page*/
+#login-form {
+	display: grid;
+	align-items: center;
+	justify-content: center;
+	align-self: flex-start;
+}
+
+.login-form-input {
+	border: none;
+	outline: none;
+	border-bottom: 4px solid grey;
+	border-radius: 3px;
+	padding: 7px 65px 12px 12px;
+	display: block;
+}
+
+/*login button*/
+#login {
+	width: 100%;
+	border: none;
+	color: white;
+	cursor: pointer;
+	outline: none;
+	background-color: #3a3a3a;
+	border-bottom: 3px solid black;
+	font-weight: bold;
+	padding: 7px;
+	border-radius: 5px;
+	width: 120px;
+	margin-left: 150px;
+}
+
+#username {
+	margin-bottom: 13px;
+	margin-top: 50%;
+	font-style: italic;
+	color: rgba(0,0,0,0.5);
+}
+
+#password {
+	margin-bottom: 20px;
+	font-style: italic;
+	color: rgba(0,0,0,0.5);
+}
+
+#register {
+	text-decoration-line: underline;
+	font-size: 20px;
+	font-weight: bold;
+	color: #B22222;
+	margin-left: 178px;
+	margin-top: 5px;
+	display: block;
+  border: none;
+  background: none;
+}
+
+#register:hover {
+	color: #da3e3e;
+}
+
+.container {
+	background: rgba(122, 130, 136, 0.2);
+	padding: 50px;
+	padding-top: 1px;
+	padding-bottom: 40px;
+	margin-top: 40px;
+}
+
+#avatar {
+	width: 70px;
+	height: 70px;
+	float: left;
+	margin-left: 50px;
+}
+
+.dropbtn {
+  color: white;
+  padding: 3px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #f1f1f1;
+}
+
+.dropdown {
+  padding-top: 20px;
+  position: relative;
+  display: inline-block;
+  float: left;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {
+	background-color: #ddd;
+}
+
+.show {
+	display: block;
+}
+
+.icons {
+	font-size: 48px;
+	display: inherit;
+}
+
+.subscr_class {
+	float: right;
+}
+
+#subscr_btn {
+	float: right;
+	right: 50px;
+	bottom: 0;
+	position: fixed;
+
 }
