--- a/WeatherApp/views/layouts/main.handlebars
+++ b/WeatherApp/views/layouts/main.handlebars
@@ -2,11 +2,17 @@
 <html>
 <head>
 	<title>WeatherApp</title>
-        <link rel="stylesheet" href="/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">	
+  <meta charset="utf-8">
+  <title>Login</title>		
+  <link rel="stylesheet" href="/css/style.css">
+  <!--for icons-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+  <script src="/js/inputValidation.js"></script>
+  <script src="/js/showAlert.js"></script>
 </head>
 <body>
-  <h1 class="title">WeatherApp</h1>
-  <h2 class="byline">by Expanse</h2>
 	{{{body}}}
 </body>
 </html>
