--- a/WeatherApp/views/register.handlebars
+++ b/WeatherApp/views/register.handlebars
@@ -1,25 +1,50 @@
-<script src="/js/inputValidation.js"></script>
-<h2>Under construction</h2>
+<center><h4 class="title" style="color:#DC143C; font-size:300%;">Weather App</h4>
+<h4 class="title" style="color:#B22222; font-style:italic; font-size:130%;">by Expanse</h4></center>
 
-<div class="register">
-  <form class="" action="register" method="post"
-       onSubmit="return usernameAndPasswordValidation();">
+<form id="login-form" style="margin-top: -20px;"
+      action="register" method="post"
+      onSubmit="return usernameAndPasswordValidation();>
+  <div class="container">
+    <p style="font-size: 23px; font-style: italic; text-align: center;">Join us to always be aware of weather</p>
+    <div style="margin-left: 40px; margin-top: -120px;">
+    <div style="margin-left: 40px; margin-top: -57px;">
     <input type="text" 
-           id="inputUserName" 
-           name="username" 
-           value="{{this.username}}"><br />
-    <label for="inputUserName"> Username </label><br />
-    <input type="password" id="inputPassword" name="password"><br />
-    <label for="inputPassword"> Password </label><br />
-    <input type="text" 
-           id="inputEmailAddr" 
            name="email" 
-           value="{{this.emailAddr}}"><br />
-    <label for="inputEmailAddr"> e-mail Address </label><br />
-    <input type="submit" name="submit" value="Register" <br />
-  </form>
-</div>
-<form class="" action="register" method="post"></form>
+           id="username" 
+           class="login-form-input" 
+           placeholder="Email" 
+           value="{{this.emailAddr}}"
+           style="margin-bottom: -147px;">
+    <input type="text" 
+           name="username" 
+           id="username" 
+           class="login-form-input" 
+           placeholder="Username" value="{{this.username}}">
+    <input type="password" 
+           name="password" 
+           id="password" 
+           class="login-form-input" 
+           placeholder="Password">
+    <input type="password" 
+           name="password2" 
+           id="password2" 
+           class="login-form-input" 
+           placeholder="Confirm password" 
+           style="margin-top: -7px;">
+  </div>
+    <input type="submit" 
+           id="login" 
+           name="submit" 
+           value="Register" 
+           style="width: 110px; margin-left: 220px; margin-bottom: 4px;">
+    <input type="submit"
+           class="register"
+           id="register"
+           style="font-size: 19px;"             
+           name="login" 
+           value="Have already joined us?" />
+  </div>
+</form>
 
 {{#if this.err_msg}}
   <h2>{{this.err_msg}}</h2>
