--- a/WeatherApp/views/login.handlebars
+++ b/WeatherApp/views/login.handlebars
@@ -22,6 +22,12 @@
              id="login" 
              name="login" 
              value="Login" />
+    </div>
+  </div>
+</form>
+<form id="login-form" action="login" method="post">
+  <div class="container2">
+    <div style="margin-left: -25px; margin-right: -5px;">
       <input type="submit"
              class="register"
              id="register"
