--- a/WeatherApp/views/register.handlebars
+++ b/WeatherApp/views/register.handlebars
@@ -7,19 +7,19 @@
   <div class="container">
     <p style="font-size: 23px; font-style: italic; text-align: center;">Join us to always be aware of weather</p>
     <div style="margin-left: 40px; margin-top: -120px;">
-      <div style="margin-left: 40px; margin-top: -200px;">
+      <div style="margin-left: 40px; margin-top: -57px;">
         <input type="text" 
            name="email" 
-           id="username" 
+           id="email" 
            class="login-form-input" 
            placeholder="Email" 
-           value="{{this.emailAddr}}"
-           style="margin-bottom: -200px;">
+           style="margin-bottom: -147px;">
         <input type="text" 
            name="username" 
            id="username" 
            class="login-form-input" 
-           placeholder="Username" value="{{this.username}}">
+           placeholder="Username"
+           value="{{this.username}}">
         <input type="password" 
            name="password" 
            id="password" 
@@ -37,17 +37,7 @@
            name="submit" 
            value="Register" 
            style="width: 110px; margin-left: 220px; margin-bottom: 4px;">
-  </div>
-</form>
-<form id="login-form" style="margin-top: -1px;"
-      action="register" method="post">
-  <div class="container2">
-    <input type="submit"
-           class="register"
-           id="register"
-           style="font-size: 19px;"             
-           name="login" 
-           value="Have already joined us?" />
+      <a href="login.html" id="register" style="font-size: 18px; font-style: italic; margin-bottom: -15px; margin-left: 185px;">Have already joined us?</a>
   </div>
 </form>
 
