--- a/WeatherApp/views/login.handlebars
+++ b/WeatherApp/views/login.handlebars
@@ -22,18 +22,7 @@
              id="login" 
              name="login" 
              value="Login" />
-    </div>
-  </div>
-</form>
-<form id="login-form" action="login" method="post">
-  <div class="container2">
-    <div style="margin-left: -25px; margin-right: -5px;">
-      <input type="submit"
-             class="register"
-             id="register"
-             style="font-size: 19px;"             
-             name="login" 
-             value="Register" />
+			<a href="register.html" id="register" style="font-size: 19px;">Register</a>
     </div>
   </div>
 </form>
