--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -112,14 +112,9 @@
 <aside>
   <div id="aside-text">
     <h3>Today's Forecast</h3>
-    <p>
-    {{#if this.weather_city}}
-    The current temperature in {{this.weather_city}} is 
-    {{this.weather_current_temp}} degrees.
-    {{else}}
-    Information is here
-    {{/if}} 
-    </p>
+    {{#each current}}
+    <p>{{this.weather}}</p>
+    {{/each}}
     <div class="icons">
       <i class='fas fa-cloud-rain'></i>
       <i class='fas fa-cloud-sun'></i>
