--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -3,7 +3,7 @@
   <div class="dropdown">
     <img src="/css/avatar.jpg" onclick="myFunction()" class="dropbtn" id="avatar">
     <div id="myDropdown" class="dropdown-content">
-      <a href="settings.html">Settings</a>
+      <a href="settings.html?username={{this.username}}">Settings</a>
       <a href="#">Help</a>
       <a href="login.html">Logout</a>
     </div>
