A small stylistic change

--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -111,7 +111,7 @@
 <!--a seperate field for today's weather-->
 <aside>
   <div id="aside-text">
-    <h3>Today's Forecast</h3>
+<h3 style="margin-top: -70px; margin-bottom: -30px;">Today's Forecast</h3>
     {{#each current}}
     <p>{{this.weather}}</p>
     {{/each}}
