--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -66,7 +66,16 @@
             value="add">
       <i class="fa fa-plus"></i>
     </button>
-  </form>
+ 
+  </form> 
+  
+ <form action="" method="post" >
+     <select id="units" name="units" value = 'imperial'>
+     <option value = "imperial">Fahrenheit</option>
+     <option value = "metric">Celsius</option>
+    </select>
+    <input type="submit" value="Select Units" />
+</form>
 
   <!--a panel for forecast for saving user's favorite cities-->
   <div id="panel" class="panel panel-default">
@@ -90,6 +99,7 @@
   <script>
     var day = "";
     var wDay = new Array(7);
+    
     wDay[0] = "Sunday";
     wDay[1] = "Monday";
     wDay[2] = "Tuesday";
