split weather page into partials

--- a/WeatherApp/views/login.handlebars
+++ b/WeatherApp/views/login.handlebars
@@ -1,5 +1,6 @@
-<center><h4 class="title" style="color:#DC143C; font-size:300%;">Weather App</h4>
-<h4 class="title" style="color:#B22222; font-style:italic; font-size:130%;">by Expanse</h4></center>
+<center>
+{{> page_header}}
+</center>
 
 <form id="login-form" action="login" method="post"
       onSubmit="return usernameAndPasswordValidation();">
