--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -30,8 +30,7 @@
   </script>
 
   <div style="float: right; text-align: center;">
-    <h4 class="title" style="color:#DC143C; font-size:300%;">Weather App</h4>
-    <h4 class="title" style="color:#B22222; font-style:italic; font-size:130%;">by Expanse</h4>
+    {{> page_header}}
   </div>
   <br/>
   <br/>
@@ -41,33 +40,7 @@
   <br/>
   <br/>
 
-  <!-- we can implement autocomplete tab here
-       with the list of zipcode/cities options-->
-
-  <!--search tab and buttons-->
-  <form action="" method="post">
-    <input type="hidden"
-           name="username"
-           value={{this.username}}>
-    <input id="input" 
-           placeholder="Search by zipcode/city"
-           name="place">
-    <button class="btn" 
-            id="searchBtn"
-            name="search"
-            type="submit"
-            value="search">
-      <i class="fa fa-search"></i>
-    </button>
-    <button class="btn" 
-            id="addBtn"
-            name="add"
-            type="submit"
-            value="add">
-      <i class="fa fa-plus"></i>
-    </button>
- 
-  </form> 
+  {{> location_select}}
   
  <form action="" method="post" >
      <select id="units" name="units" value = 'imperial'>
@@ -75,7 +48,7 @@
      <option value = "metric">Celsius</option>
     </select>
     <input type="submit" value="Select Units" />
-</form>
+  </form>
 
   <!--a panel for forecast for saving user's favorite cities-->
   <div id="panel" class="panel panel-default">
@@ -94,47 +67,11 @@
     </div>
   </div>
 
-  <!--days of the week, starting with today-->
-  <p id="weekdays"></p>
-  <script>
-    var day = "";
-    var wDay = new Array(7);
-    
-    wDay[0] = "Sunday";
-    wDay[1] = "Monday";
-    wDay[2] = "Tuesday";
-    wDay[3] = "Wednesday";
-    wDay[4] = "Thursday";
-    wDay[5] = "Friday";
-    wDay[6] = "Saturday";
-
-    var today = new Date().getDay();
-    for(var i=0; i<wDay.length; i++) {
-      day += "<br/>" + wDay[(i+today)%wDay.length] + '<p style="margin:-5px;"></p>';
-    }
-
-    document.getElementById("weekdays").innerHTML = day;
-	</script>
+  {{> weather_future}}
 
 </main>
 
-<!--a seperate field for today's weather-->
-<aside>
-  <div id="aside-text">
-<h3 style="margin-top: -70px; margin-bottom: -30px;">Today's Forecast</h3>
-    {{#each current}}
-    <p>{{this.weather}}</p>
-    {{/each}}
-    <div class="icons">
-      <i class='fas fa-cloud-rain'></i>
-      <i class='fas fa-cloud-sun'></i>
-      <i class='fas fa-cloud-sun-rain'></i>
-      <i class='fas fa-cloud-moon-rain'></i>
-      <i class='fas fa-sun'></i>
-      <i class='fas fa-snowflake'></i>
-    </div>
-  </div>
-</aside>
+{{> weather_today}}
 
 <!--subscription form-->
 <div class="dropdown2">
