--- a/WeatherApp/views/layouts/main.handlebars
+++ b/WeatherApp/views/layouts/main.handlebars
@@ -2,15 +2,18 @@
 <html>
 <head>
 	<title>WeatherApp</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">	
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>{{this.title}}</title>		
+  <title>{{this.title}}</title>
   <link rel="stylesheet" href="/css/style.css">
   <!--for icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="/js/inputValidation.js"></script>
   <script src="/js/showAlert.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAS4AUgk9_XfGOb143z63Qm9lF0-UgBi38&libraries=places&callback=initMap"
+        defer></script>
+	<script src="/js/autocomplete.js"> </script>
 </head>
 <body>
 	{{{body}}}
