--- a/WeatherApp/views/partials/location_select.handlebars
+++ b/WeatherApp/views/partials/location_select.handlebars
@@ -6,17 +6,20 @@
   <input type="hidden"
          name="username"
          value={{this.username}}>
-  <input id="input" 
+  <input id="input-Autocomplete" 
          placeholder="Search by zipcode/city"
          name="place">
-  <button class="btn" 
+
+
+
+  <button class="btn"
           id="searchBtn"
           name="search"
           type="submit"
           value="search">
     <i class="fa fa-search"></i>
   </button>
-  <button class="btn" 
+  <button class="btn"
           id="addBtn"
           name="add"
           type="submit"
@@ -24,4 +27,4 @@
     <i class="fa fa-plus"></i>
   </button>
 
-</form> 
+</form>
