initial (poor) attempt at retrieving forecast data

--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -46,11 +46,8 @@
   <div id="panel" class="panel panel-default">
     <div class="panel-body">
       <ul>
-        {{#each zipcodes}}
-        <li>{{this.zipcode}}</li>
-        {{/each}}
-        {{#each cities}}
-        <li>{{this.city}},{{this.state}},{{this.country}}</li>
+        {{#each locs}}
+        <li>{{this.place}}</li>
         {{/each}}
       </ul>
       <!-- <a class="previous round">&#8249;</a>
