--- a/WeatherApp/views/partials/weather_future.handlebars
+++ b/WeatherApp/views/partials/weather_future.handlebars
@@ -69,3 +69,11 @@
   }
   
 </script>
+
+
+{{#each locs}}
+  <p> {{this.place}} </p>
+  {{#each forecast}}
+  <p> {{hi}}, {{lo}}</p>
+  {{/each}}
+{{/each}}
