--- a/WeatherApp/views/partials/weather_today.handlebars
+++ b/WeatherApp/views/partials/weather_today.handlebars
@@ -12,74 +12,18 @@
   <input type="submit" value="Select Units" style="background-color: #DC143C; color:white; cursor: pointer; border: none; font-size: 14px; font-weight: bold;"/>
 </form>
 
-    {{#each current}}
-      <h4 id="weatherTitle"> {{this.weatherTitle}} </h4>
+    {{#each locs}}
+      <h4 id="weatherTitle"> {{this.place}} </h4>
+      <p> Current: {{this.current.currently}}</p>
+      <p> Description: {{this.current.description}}</p>
+      <p> Feels like: {{this.current.feelsLike}}</p>
+      <p> High: {{this.current.max}}</p>
+      <p> Low: {{this.current.min}}</p>
+      <p> Pressure: {{this.current.pressure}}</p>
+      <p> Humidity: {{this.current.humid}}</p>
+      <p> Visibility: {{this.current.visib}}</p>
+      <p> Wind speed: {{this.current.wind}}</p>
     {{/each}}
-    
-    <ul id="table">
-    
-    <li>Current: </li>
-    {{#each current}}
-      <li id="this">{{this.currently}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Description: </li>
-    {{#each current}}
-      <li id="this">{{this.description}}</li>
-    {{/each}}
-
-    <br/>
-    
-    <li>Feels like: </li>
-    {{#each current}}
-      <li id="this">{{this.feelsLike}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Highest temperature: </li>
-    {{#each current}}
-      <li id="this">{{this.max}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Lowest temperature: </li>
-    {{#each current}}
-      <li id="this">{{this.min}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Pressure: </li>
-    {{#each current}}
-      <li id="this">{{this.pressure}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Humidity: </li>
-    {{#each current}}
-      <li id="this">{{this.humid}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Visibility: </li>
-    {{#each current}}
-      <li id="this">{{this.visib}}</li>
-    {{/each}}
-    
-    <br/>
-    
-    <li>Wind speed: </li>
-    {{#each current}}
-      <li id="this">{{this.wind}}</li>
-    {{/each}}
-    
-    </ul>
 
     <div class="icons">
       <i class='fas fa-cloud-rain'></i>
