updated retrieveWeather.js to provide handlebars with forecast info

--- a/WeatherApp/views/partials/weather_future.handlebars
+++ b/WeatherApp/views/partials/weather_future.handlebars
@@ -72,8 +72,8 @@
 
 
 {{#each locs}}
-  <p> {{this.place}} </p>
+  <p> {{this.place}}: </p>
   {{#each forecast}}
-  <p> {{hi}}, {{lo}}</p>
+  <p> {{date}}, {{hi}}, {{lo}}, {{main}}, {{desc}}</p>
   {{/each}}
 {{/each}}
