code to enforce max_locs; code to delete saved location

--- a/WeatherApp/views/partials/location_select.handlebars
+++ b/WeatherApp/views/partials/location_select.handlebars
@@ -26,5 +26,13 @@
           value="add">
     <i class="fa fa-plus"></i>
   </button>
+  
+  <button class="btn"
+          id="subBtn"
+          name="subtract"
+          type="submit"
+          value="subtract">
+    <i class="fa fa-plus"></i>
+  </button>
 
 </form>
