--- a/WeatherApp/views/layouts/main.handlebars
+++ b/WeatherApp/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
   
   <!--for icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <script src="/js/inputValidation.js"></script>
   <script src="/js/showAlert.js"></script>
