--- a/WeatherApp/views/partials/location_select.handlebars
+++ b/WeatherApp/views/partials/location_select.handlebars
@@ -6,7 +6,7 @@
   <input type="hidden"
          name="username"
          value={{this.username}}>
-  <input id="input-Autocomplete" 
+  <input id="input-Autocomplete"
          placeholder="Search by zipcode/city"
          name="place">
 
@@ -26,13 +26,13 @@
           value="add">
     <i class="fa fa-plus"></i>
   </button>
-  
-  <button class="btn"
+
+  <!-- <button class="btn"
           id="subBtn"
           name="subtract"
           type="submit"
           value="subtract">
     <i class="fa fa-plus"></i>
-  </button>
+  </button> -->
 
 </form>
