--- a/WeatherApp/public/css/sidebar.css
+++ b/WeatherApp/public/css/sidebar.css
@@ -1,3 +1,7 @@
+body {
+	background-color:#D8BFD8 /*Thistle*/
+}
+
 #weatherDescTitle
 {
   text-align: center;
@@ -6,7 +10,7 @@
 .line
 {
     height: 1px;
-    background-color: #B0BEC5
+    /* background-color: #B0BEC5 */
 }
 
 .reading
@@ -16,5 +20,5 @@
 
 .card2
 {
-  background: brown
+  /* background: brown */
 }
