--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/mainPage.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
@@ -21,11 +22,7 @@
     <div class="row">
 
       <div class="col-8">
-
-          <div class="jumbotron" id="topTitle">
-            <h1>WeatherPal</h1>
-            <p>some description</p>
-        </div>
+        {{> page_header}}
       </div>
 
       <div class="col-4">
@@ -71,7 +68,9 @@
 
     </div>
 
-
+      {{#if this.err_msg}}
+        <h2>{{this.err_msg}}</h2>
+      {{/if}}
 
       <div class="footer" id="footerContainer">
         <div class="row">
