--- a/WeatherApp/views/partials/page_header.handlebars
+++ b/WeatherApp/views/partials/page_header.handlebars
@@ -1,2 +1,4 @@
-<h4 class="title" style="color:#DC143C; font-size:300%;">Weather App</h4>
-<h4 class="title" style="color:#B22222; font-style:italic; font-size:130%;">by Expanse</h4>
+<div>
+  <h4 style="color:#DC143C; font-size:300%;">Weather App</h4>
+  <h4 style="padding-top: -1px; color:#B22222; font-style:italic; font-size:130%;">by Expanse</h4>
+</div>
