--- a/WeatherApp/public/css/style.css
+++ b/WeatherApp/public/css/style.css
@@ -21,9 +21,25 @@ li {
 #weatherTitle {
   text-decoration: underline;
   font-size: 28px;
-  margin-bottom: -10px;
   margin-top: 13px;
 }
+
+#weatherpal {
+  color:#DC143C; 
+  font-size:57px; 
+  margin-left:490px; 
+  cursor: pointer;
+}
+
+#expanse {
+  margin-top:-11px; 
+  color:#B22222; 
+  font-style:italic; 
+  margin-left:590px; 
+  font-size:20px; 
+  margin-bottom:30px;
+}
+
 
 main {
 	width: 62%;
@@ -40,7 +56,7 @@ aside {
 #aside-text {
 	font-family: Geneva;
 	text-align: center;
-	margin-top: 90px;
+	margin-top: 30px;
 }
 
 p {
@@ -51,14 +67,6 @@ p {
 h3 {
 	font-size: 40px;
 	color:#B22222
-}
-
-.title {
-	margin-top: 20px;
-}
-
-.title + .title {
-	margin-top: -65px;
 }
 
 button {
@@ -102,46 +110,6 @@ li {
 	display: inline;
 	padding: 20px;
 	color: grey;
-}
-
-#table_week {
-	font-size: 24px;
-	margin-left: 50px;
-	margin-top: -11px;
-	font-family: Geneva;
-	color: #1a1a1a;
-  background-color: rgba(122, 130, 136, 0.2);
-  height: 140px;
-  border-collapse: collapse;
-}
-
-tr { 
-  border: none; 
-}
-
-td {
-  border-right: solid 2px grey; 
-  border-left: solid 2px grey;
-}
-
-#table_week tr, td {
-  text-align: center;
-}
-
-#table_week tr:nth-child(2) {
-    font-weight: bold;    
-}
-
-#table_week tr:nth-child(4) {
-    color: red;    
-}
-
-#table_week tr:nth-child(5) {
-    color: blue;    
-}
-
-.paddingBetweenRows td {
-    padding: 0 9px 0 9px;
 }
 
 .footer {
@@ -245,7 +213,7 @@ td {
 	padding: 50px;
 	padding-top: 1px;
 	padding-bottom: 40px;
-	margin-top: 40px;
+	margin-top: 10px;
 }
 
 .container2 {
@@ -257,8 +225,8 @@ td {
 }
 
 #avatar {
-	width: 70px;
-	height: 70px;
+	width: 76px;
+	height: 76px;
 	float: left;
 	margin-left: 50px;
 }
@@ -279,9 +247,12 @@ td {
   position: relative;
   display: inline-block;
   float: left;
+  margin-left: -945px;
 }
 
 .dropdown-content {
+  margin-left: 51px;
+  margin-top: 74px;
   display: none;
   position: absolute;
   background-color: #f1f1f1;
@@ -324,4 +295,56 @@ td {
 
 #title {
 	font-family: Geneva;
+}
+
+#dropdown {
+  width: 50%
+}
+
+#mainAreaRow {
+  margin-left: 10px;
+}
+
+#input-Autocomplete {
+  width: 290px;
+  margin-left: 30px;
+}
+
+#searchBarContainer {
+  width: 1300px;
+  height: 40px;
+  margin-left: 10px;
+  margin-bottom: 30px;
+}
+
+#mainArea {
+   margin-left: 30px;
+}
+
+#sidebarArea {
+  width: 560px;
+  margin-left: 60px;
+  margin-top: -32px;
+  padding-top: -50px;
+}
+
+.btn {
+  background-color: #DC143C;
+  color: white;
+  margin-top: -2px;
+  font-size: 15px;
+}
+
+#units_btn {
+  background-color: #DC143C; 
+  color:white; 
+  cursor: pointer; 
+  border: none; 
+  font-size: 16px; 
+  font-weight: bold;
+}
+
+#units_btn:hover {
+  background-color: #ee4466;
+  border: none;
 }
