--- a/WeatherApp/views/partials/location_select.handlebars
+++ b/WeatherApp/views/partials/location_select.handlebars
@@ -1,16 +1,14 @@
-<!-- we can implement autocomplete tab here
-     with the list of zipcode/cities options-->
-
 <!--search tab and buttons-->
-<form action="" method="post">
+
+<div style="display: inline-block;">
+
+<form action="" method="post" style="float: left;">
   <input type="hidden"
          name="username"
          value={{this.username}}>
   <input id="input-Autocomplete"
          placeholder="Search by zipcode/city"
          name="place">
-
-
 
   <button class="btn"
           id="searchBtn"
@@ -34,14 +32,18 @@
           value="subtract">
     <i class="fa fa-minus"></i>
   </button>
-
 </form>
 
-<form action="" method="post" style="margin-top: 35px; margin-left: 270px; margin-bottom: -10px;">
+<!--spaces-->
+&nbsp &nbsp &nbsp
+
+<form action="" method="post" style="float: right; margin-top: 5px; margin-left: 612px;">
   <select id="units" name="units" value="imperial" style="border-radius:36px;
   overflow:hidden;">
     <option value="imperial">Fahrenheit</option>
     <option value="metric">Celsius</option>
   </select>
-  <input type="submit" value="Select Units" style="background-color: #DC143C; color:white; cursor: pointer; border: none; font-size: 14px; font-weight: bold;"/>
+  <input type="submit" id="units_btn" value="Select Units"/>
 </form>
+
+</div>
