--- a/WeatherApp/views/partials/page_header.handlebars
+++ b/WeatherApp/views/partials/page_header.handlebars
@@ -1,4 +1,10 @@
 <div>
-  <h4 style="color:#DC143C; font-size:300%;">Weather App</h4>
-  <h4 style="padding-top: -1px; color:#B22222; font-style:italic; font-size:130%;">by Expanse</h4>
+  <h4 id="weatherpal" onclick="reload_func();">Weatherpal</h4>
+  <h4 id="expanse">by Expanse</h4>
 </div>
+
+<script>
+ function reload_func() {
+    window.location.reload(true);
+}
+</script>
