--- a/WeatherApp/views/partials/page_header.handlebars
+++ b/WeatherApp/views/partials/page_header.handlebars
@@ -1,10 +1,4 @@
 <div>
-  <h4 id="weatherpal" onclick="reload_func();">Weatherpal</h4>
+  <h4 id="weatherpal">Weatherpal</h4>
   <h4 id="expanse">by Expanse</h4>
 </div>
-
-<script>
- function reload_func() {
-    window.location.reload(true);
-}
-</script>
