--- a/WeatherApp/views/weather.handlebars
+++ b/WeatherApp/views/weather.handlebars
@@ -21,9 +21,11 @@
 
     <div class="row">
 
-      <div class="col-8">
+    <div style="margin-bottom:-90px;">
+      <center>
         {{> page_header}}
-      </div>
+      </center>
+    </div>
 
       <div class="col-4">
         <div class="dropdown">
